--- a/package.json
+++ b/package.json
@@ -17,19 +17,29 @@
   "bugs": {
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
-  "dependencies": {
-    "coffee-script": "~1.6"
+  "peerDependencies": {
+    "hubot": "2.x"
   },
   "devDependencies": {
-    "chai": "*",
+    "chai": "^2.1.1",
+    "coffee-script": "1.6.3",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha-test": "~0.12.7",
+    "grunt-release": "~0.11.0",
+    "hubot": "2.x",
+    "hubot-test-helper": "^1.3.0",
     "husky": "^0.13.3",
-    "mocha": "*",
-    "sinon": "*",
-    "sinon-chai": "*"
+    "matchdep": "~0.3.0",
+    "mocha": "^2.1.0",
+    "nock": "^9.0.9",
+    "sinon": "^1.13.0",
+    "sinon-chai": "^2.7.0"
   },
   "main": "index.coffee",
   "scripts": {
-    "test": "script/test",
+    "test": "grunt test",
     "precommit": "npm test",
     "prepush": "npm test"
   }
