--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
   "peerDependencies": {
-    "hubot": "2.x"
+    "hubot": ">=2.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -29,7 +29,7 @@
     "grunt-mocha-test": "~0.13.3",
     "grunt-release": "~0.14.0",
     "hubot": "2.x",
-    "hubot-test-helper": "^1.8.1",
+    "hubot-test-helper": "^1.9.0",
     "husky": "^0.14.3",
     "matchdep": "~2.0.0",
     "mocha": "^5.0.1",
