--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
   "peerDependencies": {
-    "hubot": ">=2.0"
+    "hubot": ">=2 <10 || 0.0.0-development"
   },
   "devDependencies": {
     "chai": "^4.1.2",
