--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hubot-bcycle-finder",
   "description": "Get the status of nearby BCycle stations",
   "version": "2.1.0",
-  "author": "stephenyeargin",
+  "author": "Stephen Yeargin <stephen@yearg.in>",
+  "homepage": "https://github.com/stephenyeargin/hubot-bcycle-finder",
   "license": "MIT",
   "keywords": [
     "hubot",
@@ -25,17 +26,17 @@
     "coffee-script": "1.12.7",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "~1.0.1",
     "grunt-mocha-test": "~0.13.3",
     "grunt-release": "~0.14.0",
     "hubot": "2.x",
     "hubot-test-helper": "^1.9.0",
     "husky": "^0.14.3",
     "matchdep": "~2.0.0",
-    "mocha": "^5.0.1",
-    "nock": "^9.1.6",
-    "sinon": "^4.3.0",
-    "sinon-chai": "^2.14.0"
+    "mocha": "^5.1.1",
+    "nock": "^9.2.5",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0"
   },
   "main": "index.coffee",
   "scripts": {
@@ -44,6 +45,6 @@
     "prepush": "npm test"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.10"
   }
 }
