--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
   "peerDependencies": {
-    "hubot": ">=2 <10 || 0.0.0-development"
+    "hubot": "^3"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "coffee-script": "^1.12.7",
-    "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-mocha-test": "^0.13.3",
     "hubot-test-helper": "^1.9.0",
-    "husky": "^0.14.3",
+    "husky": "^3.0.0",
     "matchdep": "^2.0.0",
-    "mocha": "^5.2.0",
-    "nock": "^9.6.0",
-    "release-it": "^7.5.0",
-    "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0"
+    "mocha": "^6.1.4",
+    "nock": "^10.0.6",
+    "release-it": "^12.3.0",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0"
   },
   "main": "index.coffee",
   "scripts": {
@@ -45,6 +45,6 @@
     "prepush": "npm test"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.11"
   }
 }
