--- a/package.json
+++ b/package.json
@@ -18,37 +18,27 @@
   "bugs": {
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "peerDependencies": {
     "hubot": "^3"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "coffee-script": "^1.12.7",
-    "grunt": "^1.1.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-mocha-test": "^0.13.3",
-    "hubot-test-helper": "^1.9.0",
-    "husky": "^4.2.5",
+    "husky": "^6.0.0",
     "matchdep": "^2.0.0",
-    "mocha": "^7.2.0",
-    "nock": "^12.0.3",
-    "release-it": "^13.6.2",
-    "sinon": "^9.0.2",
-    "sinon-chai": "^3.5.0"
+    "mocha": "^8.3.2",
+    "nock": "^13.0.11",
+    "release-it": "^14.5.0",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0"
   },
   "main": "index.coffee",
   "scripts": {
     "release": "release-it",
-    "test": "grunt test"
-  },
-  "dependencies": {
-    "lodash": "^4.17.15"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test"
-    }
+    "test": "grunt test",
+    "prepare": "husky install"
   }
 }
