--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "coffee-script": "^1.12.7",
+    "hubot-test-helper": "^1.9.0",
     "husky": "^6.0.0",
     "matchdep": "^2.0.0",
     "mocha": "^8.3.2",
@@ -38,7 +39,7 @@
   "main": "index.coffee",
   "scripts": {
     "release": "release-it",
-    "test": "grunt test",
+    "test": "mocha --require coffee-script/register \"test/**/*.coffee\" --reporter spec",
     "prepare": "husky install"
   }
 }
