Cleanup package-lock.json

--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "release": "release-it",
     "test": "mocha --require coffee-script/register \"test/**/*.coffee\" --reporter spec",
     "prepare": "husky install"
+  },
+  "volta": {
+    "node": "16.20.0",
+    "npm": "8.19.4"
   }
 }
