--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "bugs": {
     "url": "https://github.com/stephenyeargin/hubot-bcycle-finder/issues"
   },
-  "dependencies": {},
   "peerDependencies": {
-    "hubot": "^3 || ^4"
+    "hubot": ">=3 || 0.0.0-development"
   },
   "devDependencies": {
     "chai": "^4.3.7",
